Prevent wrapping of transcriptions

--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,9 @@ div.transcription { /*The color of phonetics that can be played with hover*/
   display:       inline-block;
   padding-left:  0.1em;
   padding-right: 0.1em;
-  font-family:   "Calibri", "Arial Unicode MS", "Cambria", "Doulos SIL", "Gentium", "TITUS Cyberbit Basic", sans-serif;}
+  font-family:   "Calibri", "Arial Unicode MS", "Cambria", "Doulos SIL", "Gentium", "TITUS Cyberbit Basic", sans-serif;
+  white-space: nowrap;
+}
 div.altSpelling { /*The color of altSpellings, usually inside some table above the phonetics*/
   font-style:   italic;
   font-family:  "Calibri", "Arial Unicode MS", "Cambria", "Doulos SIL", "Gentium", "TITUS Cyberbit Basic", sans-serif;}
